<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LogIn"
    android:id="@+id/login_layout">

    <!--Logo-->

    <LinearLayout
        android:layout_marginTop="25sp"
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35sp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uraniabold"
            android:text="@string/app_name_lowercase"
            android:layout_marginStart="10dp"
            android:textColor="@color/textPrimary"
            android:textSize="35sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout">
        <LinearLayout
            android:id="@+id/sin_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40sp"
            android:padding="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SignIn"
                android:textColor="@color/textPrimary"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:textSize="45sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome back you've been missed!"
                android:textColor="@color/textSecondary"
                android:fontFamily="@font/ibmplexsansregular"
                android:textSize="20sp"/>

            <!--Text Fields-->


            <EditText
                android:id="@+id/email_sin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbg"
                android:layout_marginTop="25sp"
                android:hint="@string/sample_email"
                android:textColorHint="@color/textSecondary"
                android:textColor="@color/primary"
                android:fontFamily="@font/sanfrancisco"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15sp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/pass_sin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbg"
                android:layout_marginTop="10sp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/textSecondary"
                android:textColor="@color/primary"
                android:fontFamily="@font/sanfrancisco"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="15sp"
                android:inputType="textPassword"/>

            <!--Forgot Password-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7sp"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f_pass_pre_text"
                    android:fontFamily="@font/ibmplexsansregular"
                    android:textColor="@color/textSecondary"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/f_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f_pass"
                    android:fontFamily="@font/ibmplexsanssemibold"
                    android:textColor="@color/textPrimary"
                    android:onClick="f_pass"
                    android:textSize="15sp"/>

            </LinearLayout>

            <!--Submit Button-->
            <Button
                android:id="@+id/sin_lS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/accentbuttonbg"
                android:text="SignIn"
                android:textColor="@color/white"
                android:fontFamily="@font/ibmplexsanssemibold"
                android:textAllCaps="false"
                android:onClick="signIn_lS"
                android:textSize="20sp"
                android:layout_marginTop="20sp"/>

            <!--Forgot Password-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sup_pre_text"
                    android:fontFamily="@font/ibmplexsansregular"
                    android:textColor="@color/textSecondary"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/sup_lS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sup"
                    android:fontFamily="@font/ibmplexsanssemibold"
                    android:textColor="@color/accent_secondary"
                    android:onClick="sup_lS"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/err_sin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratbold"
                android:textColor="@color/err"
                android:layout_marginTop="10sp"
                android:textAlignment="center"
                android:textSize="15sp"/>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>