<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".WelcomeScreen">

    <!--Logo-->

    <LinearLayout
        android:layout_marginTop="30sp"
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35sp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uraniabold"
            android:text="@string/app_name_lowercase"
            android:layout_marginStart="10dp"
            android:textColor="@color/textPrimary"
            android:textSize="40sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scv_ws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="15sp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lfont"
                android:text="@string/text_ws"
                android:textColor="@color/textPrimary"
                android:textSize="75sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/sanfrancisco"
                android:text="@string/sub_text_ws"
                android:textColor="@color/textSecondary"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/ll_ws"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:padding="10sp">

                <Button
                    android:id="@+id/sup_ws"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbgsecondary"
                    android:fontFamily="@font/sanfrancisco"
                    android:onClick="signUp_ws"
                    android:text="SignUp"
                    android:textAllCaps="false"
                    android:textColor="@color/primary" />

                <Button
                    android:id="@+id/sin_ws"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/accentbuttonbg"
                    android:fontFamily="@font/sanfrancisco"
                    android:onClick="signIn_ws"
                    android:text="SignIn"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
